--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
         "vscode": "^1.26.0"
     },
     "categories": [
-        "Other"
+        "Programming Languages"
     ],
     "activationEvents": [
-        "onCommand:extension.sayHello"
+        "workspaceContains:**/elm.json"
     ],
     "main": "./out/extension",
     "contributes": {
-        "commands": [
+        "languages": [
             {
-                "command": "extension.sayHello",
-                "title": "Hello World"
+                "id": "elm",
+                "aliases": [
+                    "Elm",
+                    "elm"
+                ],
+                "extensions": [
+                    ".elm"
+                ]
             }
         ]
     },
@@ -32,6 +38,7 @@
     "devDependencies": {
         "typescript": "^2.6.1",
         "vscode": "^1.1.21",
+        "vscode-languageclient": "^4.1.4",
         "tslint": "^5.8.0",
         "@types/node": "^8.10.25",
         "@types/mocha": "^2.2.42"
