Add trace for client language server communication

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "categories": [
         "Programming Languages"
     ],
-        "activationEvents": [
-            "workspaceContains:**/elm.json"
-        ],
-        "main": "./out/extension",
+    "activationEvents": [
+        "workspaceContains:**/elm.json"
+    ],
+    "main": "./out/extension",
     "contributes": {
         "languages": [
             {
@@ -45,21 +45,38 @@
                 "scopeName": "source.elm",
                 "path": "./syntaxes/elm.json"
             }
-        ]
-            },
-            "scripts": {
-                "vscode:prepublish": "npm run compile",
-                "compile": "tsc -p ./",
-                "watch": "tsc -watch -p ./",
-                "postinstall": "node ./node_modules/vscode/bin/install",
-                "test": "npm run compile && node ./node_modules/vscode/bin/test"
-            },
-            "devDependencies": {
-                "typescript": "^3.1.6",
-                "vscode": "^1.1.21",
-                "vscode-languageclient": "^5.1.1",
-                "tslint": "^5.8.0",
-                "@types/node": "^10.12.2",
-                "@types/mocha": "^5.2.5"
+        ],
+        "configuration": {
+            "type": "object",
+            "title": "Elm configuration",
+            "properties": {
+                "elmLanguageServer.trace.server": {
+                    "scope": "window",
+                    "type": "string",
+                    "enum": [
+                        "off",
+                        "messages",
+                        "verbose"
+                    ],
+                    "default": "off",
+                    "description": "Traces the communication between VS Code and the language server."
+                }
+            }
+        }
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    },
+    "devDependencies": {
+        "typescript": "^3.1.6",
+        "vscode": "^1.1.21",
+        "vscode-languageclient": "^5.1.1",
+        "tslint": "^5.8.0",
+        "@types/node": "^10.12.2",
+        "@types/mocha": "^5.2.5"
     }
 }
